# ec2-instance-metadata-rs

./: Cargo.toml
src/: lib.rs
